ChangeLog 'Dimemas package'

Structure

Date - user - Tool (Simulator | GUI | prv2dim | trf2dim | Other)

	FEATURES: 	explanation of new features

	BUGFIX:   	explanation of bug solved

	CHANGES:  	explanation of codification changes

2012/11/23 - jgonzale - Other
	CHANGES: 	Version update to '4.3.1'

	CHANGES:	Modifications to adapt to the build farm

2012/10/19 - jgonzale - Other
	CHANGES:	Version update to '4.3.0'

	CHANGES:	Minor cosmetic changes in the output

2012/10/19 - jgonzale - Other
	BUGFIX:		Solved a bug in the compilation system of the 'common_utilities'
				that prevent the Dimemas trace to create nanosecond traces.

2012/10/19 - jgonzale - Simulator
	CHANGES:	Using negative values in the 'modules information' field
				of the CFG file now indicated the simulator that all
				CPU bursts inside this module will change its duration to
				absoulte value of the number indicated. Required to
				perform 'forced balancing' simulations.

2012/10/10 - jgonzale - prv2dim
	CHANGES:	Removed a wrong information message in the
				'ParaverTraceParser'.

	CHANGES: 	Version updated to '4.2.2'.

2012/10/10 - jgonzale - Other
	BUGFIX:		Solved the missing definition 'DIMEMAS_NEW_TRACE' on
				'common_utilities' commodity library.	

	CHANGES:	Version updated to '4.2.1'.

	CHANGES:	Updated README file.

2012/10/09 - jgonzale - Simulator
	BUGFIX:		Solved a massive leak in 'file_data_access.c' when
				reading actions. 'op_fields' variable was never free'd
				causing a total memory waste (each trace line stay in
				memory during the whole execution)

	CHANGES:	'MALLOC_*' (in 'mallocame.h|c') never used anymore.
				All memory allocation now uses the pure standard
				'malloc/free' calls.

	CHANGES:	All 'common-files' dependencies are now inside the
				source code package. This is the first step in to rebuild
				an actual 'common-files' in the Performance Tools team.

	BUGFIX:		Almost all compilation 'warnings' cleaned.

2012/09/12 - jgonzale - GUI